--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: LiKCu's Blog
+custom_css: true
 ---
 <div class="home">
   <h2 calss="page-heading">Welcome<br>欢迎━(*｀∀´*)ノ亻!</h2>
