--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ custom_css: true
   {% endif %}
 
 
-  <h3>------分界线------</h3>
+  <h4>------分界线------</h4>
 
   <!-- 生活分类 -->
   <section class="category-section">
@@ -46,5 +46,6 @@ custom_css: true
       </li>
       {% endfor %}
     </ul>
-  </section
+  </section>
+
 </div>
