--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: default
 title: LiKCu's Blog
 custom_css: true
 ---
+<link rel="stylesheet" href="{{ '/assets/home.css' | relative_url }}">
+
 <div class="home">
   <h2 class="page-heading">Welcome<br>欢迎━(*｀∀´*)ノ亻!</h2>
   <h2>Following are my blogs</h2>
