--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: LiKCu's Blog
 <link rel="stylesheet" href="{{ '/assets/home.css' | relative_url }}">
 
 <header class="top-nav">
-  <div class="logo"> LiKCu  </div>
+  <div class="logo">LiKCu</div>
   <nav class="menu">
     <a href="#" class="menu-item" onclick="switchMainTab('journal')">日志</a>
     <a href="#" class="menu-item" onclick="switchMainTab('album')">相册</a>
@@ -27,6 +27,7 @@ title: LiKCu's Blog
       <ul>
         <li onclick="showAlbum('stamp')">橡皮章</li>
         <li onclick="showAlbum('handwork')">手工</li>
+        <li onclick="showAlbum('travelfrog')">旅行青蛙</li>
       </ul>
     </div>
   </aside>
