--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ title: LiKCu's Blog
     
     <div id="journal-categories" style="display">
       
-      <h3 class="sidebar-title">-日志-</h3>
+      <h3 class="sidebar-title">= 日志 =</h3>
       <ul>
         <li onclick="showCategory('real-log')">真·日志</li>
         <li onclick="showCategory('daily-log')">流水账日志</li>
@@ -37,7 +37,7 @@ title: LiKCu's Blog
       </ul>
     </div>
     <div id="album-categories" style="display:none;">
-      <h3 class="sidebar-title">-相册-</h3>
+      <h3 class="sidebar-title">= 相册 =</h3>
       <ul>
         <li onclick="showAlbum('stamp')">橡皮章</li>
         <li onclick="showAlbum('handwork')">手工</li>
